Sun, 28 Oct 2007 13:30:40 +0100 <thp@perli.net>
Allow "https://" URLs for episode URLs, as we can handle these, too

	* src/gpodder/util.py: Allow "https://" as a valid URL scheme, as we
	can handle https URLs, thanks to Aravind Seshadri
	<aravind@aravind.name> who initially reported this bug

Thu, 25 Oct 2007 14:00:01 +0200 <thp@perli.net>
Sync videos to the "Video Podcasts" playlist instead of the "Video" menu

	* src/gpodder/libipodsync.py: Merged patch from Nicolas Quienot
	<niqooo@gmail.com> to sync videos to the "Video Podcasts" menu instead
	of the "Videos" menu, as documented on http://ipodlinux.org/ITunesDB

Tue, 23 Oct 2007 09:24:52 +0200 <thp@perli.net>a
sync_filename in podcastItem; cleanup; hide extra progressbar on transfer

	* src/gpodder/gui.py: Use podcastItem's sync_filename(); hide the
	unnecessary second progressbar when only syncing one channel (i.e.
	when clicking on the "transfer" button in the main window
	* src/gpodder/libgpodder.py: Remove unneeded lexists import and
	warning; clean-up
	* src/gpodder/libipodsync.py: Use podcastItem's sync_filename()
	* src/gpodder/libpodcasts.py: Add sync_filename() to podcastItem,
	returns the custom_sync_name or the title of the episode, based on the
	user's configuration settings for FS-based MP3 player sync

Sun, 07 Oct 2007 14:38:31 +0200 <thp@perli.net>
Add wishlist items to TODO list from Paul and Wilfred

	* TODO: New wishlist items, ideas and suggestions

Sat, 06 Oct 2007 12:39:57 +0200 <thp@perli.net>
Limit download progress status updates to reduce CPU load

	* src/gpodder/download.py: Limit the amount of status updates the
	download threads send to the DownloadStatusManager to one per second;
	this should make gPodder less CPU-intensive with many parallel
	downloads; thanks to Wilfred van Rooijen for reporting and testing

Tue, 02 Oct 2007 17:59:29 +0200 <thp@perli.net>
Update channel models (icons) after iPod synchronization

	* src/gpodder/gui.py: Call update_model() on each channel after an